@@ -374,6 +374,9 @@ Extension Modules
 Library
 -------
 
+- bpo-21071: struct.Struct.format type is now :class:`str` instead of
+  :class:`bytes`.
+
 - bpo-29212: Fix concurrent.futures.thread.ThreadPoolExecutor threads to have
   a non repr() based thread name by default when no thread_name_prefix is
   supplied.  They will now identify themselves as "ThreadPoolExecutor-y_n".
